<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddItemFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/app_bar">

        <com.google.android.material.appbar.MaterialToolbar
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/back_icon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/ic_back"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/fragment_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/add_item"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="25sp"
                    android:fontFamily="cursive"
                    app:layout_constraintStart_toEndOf="@id/back_icon"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginStart="15dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_name_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        app:hintTextColor="@color/app_bar"
        android:textColorHint="@color/app_bar"
        app:layout_constraintTop_toBottomOf="@id/app_bar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:boxStrokeColor="@color/app_bar"
        app:boxStrokeWidth="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_address_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_address"
        app:hintTextColor="@color/app_bar"
        android:textColorHint="@color/app_bar"
        app:layout_constraintTop_toBottomOf="@id/item_name_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:boxStrokeColor="@color/app_bar"
        app:boxStrokeWidth="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.checkbox.MaterialCheckBox
        android:id="@+id/in_season_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/item_address_label"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:text="@string/currently_in_season"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:paddingStart="10dp"
        android:paddingEnd="2dp"
        app:buttonTint="@color/app_bar"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/item_notes_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_notes"
        app:hintTextColor="@color/app_bar"
        android:textColorHint="@color/app_bar"
        app:layout_constraintTop_toBottomOf="@id/in_season_checkbox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="10dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        app:boxStrokeColor="@color/app_bar"
        app:boxStrokeWidth="1dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/item_notes"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text"
            android:singleLine="true"/>

    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/save_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:backgroundTint="@color/app_bar"
        app:layout_constraintTop_toBottomOf="@id/item_notes_label"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="30dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/delete_button"
        style="@style/Widget.Material3.Button.OutlinedButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete"
        android:textColor="@android:color/holo_red_light"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toBottomOf="@id/save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="15dp"
        android:visibility="invisible"/>

</androidx.constraintlayout.widget.ConstraintLayout>